--- a/cardGame copy/index.html
+++ b/cardGame copy/index.html
@@ -27,13 +27,11 @@
             }
             window.application.blocks[blockName](container);
         },
-        timers: [],
-        timersSecond: [],
-        timersThird: [],
         challenge: '',
-        token: '',
-        idMatch: '',
-        enemy: '',
+        status: '',
+        timerPlaying: [],
+        generatedCards: '',
+        pickedCards: '',
         }
         
         const container = document.querySelector('.app');
@@ -42,5 +40,8 @@
     </script>
     <script src="../lib/request.js"></script>
     <script src="startPage.js"></script>
+    <script src="easyChallenge.js"></script>
+    <script src="mediumChallenge.js"></script>
+    <script src="hardChallenge.js"></script>
 </body>
 </html>
