--- a/RockScissorsPaper Game/index.html
+++ b/RockScissorsPaper Game/index.html
@@ -424,7 +424,7 @@
         enemyLine.textContent = `Вы против ${window.application.enemy}`;
 
         const img = document.createElement('img');
-        img.setAttribute('src', '/kursovay/image/win.png');
+        img.setAttribute('src', '/RockScissorsPaper Game/image/win.png');
         img.classList.add('result-image');
 
         const statusTheGame = document.createElement('h2');
@@ -475,7 +475,7 @@
         enemyLine.textContent = `Вы против ${window.application.enemy}`;
 
         const img = document.createElement('img');
-        img.setAttribute('src', '/kursovay/image/lose.png');
+        img.setAttribute('src', '/RockScissorsPaper Game/image/lose.png');
         img.classList.add('result-image');
 
         const statusTheGame = document.createElement('h2');
@@ -493,7 +493,7 @@
 
     window.application.screens['Lose'] = renderLoseScreen;
 </script>
-    <script src="/lib/request.js"></script>
+    <script src="lib/request.js"></script>
     <script src="index.js"></script>
     <script src="start.json"></script>
 </body>
