--- a/cardGame/index.html
+++ b/cardGame/index.html
@@ -38,7 +38,7 @@
 
         
     </script>
-    <script src="/cardGame/lib/request.js"></script>
+    <script src="/cardGame copy/lib/request.js"></script>
     <script src="startPage.js"></script>
     <script src="easyChallenge.js"></script>
     <script src="mediumChallenge.js"></script>
